<resources>
    <string name="app_name">Займы Онлайн</string>
    <string name="nameRegex">^[a-zA-Zа-яА-Я]{1,30}</string>
    <string name="registration">Регистрация</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="name">Имя</string>
    <string name="register">Зарегистрироваться</string>
    <string name="nameError">Только латиница и кириллица</string>
    <string name="phoneError">Неверный формат номера</string>
    <string name="passwordError">8–30 латинских символов, включая заглавные и строчные, и цифры</string>
    <string name="repeatPasswordError">Пароли не совпадают</string>
    <string name="login">Войти</string>
    <string name="loginError">Неверное имя или пароль</string>
    <string name="sharedPrefsName">LoansPreferences</string>
    <string name="registration_suggest">Нет аккаунта? Зарегистрироваться</string>
    <string name="log_in">Вход</string>
    <string name="ApiKeyStorageName">APIKEY</string>
    <string name="greetings">Приветствуем</string>
    <string name="history">История</string>
    <string name="empty_history">Вы пока не совершали займов</string>
    <string name="surname_hint">Фамилия</string>

    <string name="amountTemplate">Сумма в рублях:</string>
    <string name="percentTemplate">Процентная ставка:</string>
    <string name="dateTemplate">Дата займа:</string>
    <string name="periodTemplate">Срок займа:</string>
    <string name="new_loan">Оформить займ</string>
    <string name="create_new_loan">Новый займ</string>
    <string name="phone_hint">Номер телефона</string>
    <string name="loan_sum">Сумма займа</string>
    <string name="create_new_loan_button_text">Оформить</string>

    <string name="e401">Ошибка авторизации, перезайдите в аккаунт</string>
    <string name="e403">Доступ к сервису запрещен, попробуйте позже</string>
    <string name="e404">Сервис не найден, попробуйте позже</string>
    <string name="connection_error">Проверьте интернет соединение и попробуйте еще раз</string>
    <string name="loan_info_title">Информация о займе</string>
    <string name="loaner_firstname">Имя заемщика:</string>
    <string name="loaner_lastname">Фамилия заемщика:</string>
    <string name="phone_number_text">Номер телефона:</string>
    <string name="status">Статус заявки:</string>

    <string name="success_message">Успешно</string>
    <string name="failure_message">Ошибка</string>
    <string name="logout_message">Выйти из аккаунта?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="APPROVED">Подтверждена</string>
    <string name="REJECTED">Отклонена</string>
    <string name="REGISTERED">Зарегистрирована</string>
    <string name="get_loan_instruction">Для получения займа используйте ближайший терминал, обслуживающий Вашу карту</string>
</resources>