<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        tools:context=".ui.fragments.DetailedLoanFragment">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:clickable="true"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="@id/title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/title_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_text"
            style="@style/HeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_info_title"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/first_name"
            style="@style/AttributeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/loaner_firstname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/close" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/firstname_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="@id/first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/first_name"
            app:layout_constraintTop_toTopOf="@id/first_name"
            tools:text="@tools:sample/full_names" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/last_name"
            style="@style/AttributeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/loaner_lastname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lastname_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="@id/last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/last_name"
            app:layout_constraintTop_toTopOf="@id/last_name"
            tools:text="@tools:sample/full_names" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/phone_number"
            style="@style/AttributeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/phone_number_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/phone_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="@id/phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/phone_number"
            app:layout_constraintTop_toTopOf="@id/phone_number"
            tools:text="@tools:sample/us_phones" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date"
            style="@style/AttributeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dateTemplate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="@id/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/date"
            app:layout_constraintTop_toTopOf="@id/date"
            tools:text="@tools:sample/date/hhmmss" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/period"
            style="@style/AttributeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/periodTemplate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/period_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="@id/period"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/period"
            app:layout_constraintTop_toTopOf="@id/period"
            tools:text="@tools:sample/date/hhmmss" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/percent"
            style="@style/AttributeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/percentTemplate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/period" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/percent_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="@id/percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/percent"
            app:layout_constraintTop_toTopOf="@id/percent"
            tools:text="@tools:sample/date/hhmmss" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/amount"
            style="@style/AttributeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/amountTemplate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/percent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/amount_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="@id/amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/amount"
            app:layout_constraintTop_toTopOf="@id/amount"
            tools:text="@tools:sample/date/hhmmss" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/status"
            style="@style/AttributeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amount" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/status_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="@id/status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/status"
            app:layout_constraintTop_toTopOf="@id/status"
            tools:text="@tools:sample/date/hhmmss" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/get_loan_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:scrollbars="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status"
            tools:text="@tools:sample/lorem/random" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>